fix: align game field and controls, add regeneration time

--- a/index.css
+++ b/index.css
@@ -1,25 +1,23 @@
-/* style.css */
-#game-container {
-    text-align: center;
-    margin-top: 20px;
-}
-
-#grid {
-    display: inline-block;
-    border: 2px solid black;
-}
-
-#grid div {
+body {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin: 0;
 }
 
-#grid div span {
-    width: 20px;
-    height: 20px;
-    border: 1px solid grey;
-    box-sizing: border-box;
+canvas {
+    border: 3px solid black;
 }
 
 #controls {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-top: 20px;
+}
+
+#controls > * {
+    margin: 0 10px;
 }
